--- a/miracledex.css
+++ b/miracledex.css
@@ -59,6 +59,22 @@ body{
     border-radius: 8px;
     margin-bottom: 12px;
 }
+#loadMoreBtn-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+.loadMoreBtn {
+    font-weight: bold;
+    font-size: 24px;
+    font-family: "Libre Caslon Display", serif;
+    padding: 0.5rem 1.5rem;
+    border: 0.5px solid black;
+    background: lightgray;
+    cursor: pointer;
+    border-radius: 12px;
+}
 
 /* Responsive design */
 @media (max-width: 768px) {
